<resources>
    <string name="app_name">Eatical</string>
    <string name="location_not_granted_error">In order to use this app you must grand locations.</string>
    <string name="location_not_on_error">Please turn on your location and try again.</string>
    <string name="camera_permission_not_granted_error">In order to open the camera you need to grand permissions.</string>
    <string name="gallery_permission_not_granted_error">In order to open the gallery you need to grand permissions.</string>
    <string name="okay">Okay</string>
    <string name="open_camera">Open camera</string>
    <string name="open_gallery">Open gallery</string>
    <string name="shoot_photos_on_interval">Shoot photos on interval</string>
    <string name="restaurant">Restaurant</string>
    <string name="food">Food</string>
    <string name="menu">Menu</string>
    <string name="description">An app that sends data to the backend.</string>
    <string name="choose_location">Choose location</string>
    <string name="done">Done</string>
    <string name="data_null">Data cannot be null</string>
    <string name="coordinates_null">Coordinates cannot be null</string>
    <string name="user_did_not_choose_coordinates">The user did not choose his coordinates. Device location coordinates are set.</string>
    <string name="device_location_set">Device location set</string>
    <string name="your_photo">Your photo</string>
    <string name="photo_description">This photo will be send to the backend as type %s.</string>
    <string name="send">Send</string>
    <string name="back">Back</string>
    <string name="reset_location">Reset location</string>
</resources>