<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_700"
    tools:context=".MainActivity">

    <include
        android:id="@+id/topDesign"
        layout="@layout/top_design"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cameraButton"
        style="@style/outlineButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="40dp"
        android:text="@string/open_camera"
        android:textColor="@color/white"
        android:backgroundTint="@color/transparentWhite"
        app:cornerRadius="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@id/topDesign"
        app:strokeColor="@color/white"
        app:strokeWidth="2dp"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/galleryButton"
        style="@style/outlineButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="32dp"
        android:textColor="@color/white"
        android:backgroundTint="@color/transparentWhite"
        android:text="@string/open_gallery"
        app:cornerRadius="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cameraButton"
        app:strokeColor="@color/white"
        app:strokeWidth="2dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/intervalShooterButton"
        style="@style/outlineButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="40dp"
        android:textColor="@color/white"
        android:backgroundTint="@color/transparentWhite"
        android:text="@string/shoot_photos_on_interval"
        app:cornerRadius="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/galleryButton"
        app:strokeColor="@color/white"
        app:strokeWidth="2dp"/>

    <CheckBox
        android:id="@+id/restaurantCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="12dp"
        android:text="@string/restaurant"
        android:checked="false"
        android:textColor="@color/white"

        app:layout_constraintEnd_toStartOf="@+id/foodCheckbox"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/intervalShooterButton"/>

    <CheckBox
        android:id="@+id/foodCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="12dp"
        android:text="@string/food"
        android:checked="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/menuCheckbox"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/restaurantCheckbox"
        app:layout_constraintTop_toBottomOf="@+id/intervalShooterButton"/>

    <CheckBox
        android:id="@+id/menuCheckbox"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:text="@string/menu"
        android:checked="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/foodCheckbox"
        app:layout_constraintTop_toBottomOf="@+id/intervalShooterButton"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mapButton"
        style="@style/outlineButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="32dp"
        android:textColor="@color/white"
        android:backgroundTint="@color/transparentWhite"
        app:cornerRadius="100dp"
        android:text="@string/choose_location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/foodCheckbox"
        app:strokeColor="@color/white"
        app:strokeWidth="2dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>